tests/ui/specialization/coherence/default-impl-normalization-ambig-2.stderr
error[E0277]: the trait bound `u16: Assoc` is not satisfied
  --> $DIR/default-impl-normalization-ambig-2.rs:17:14
   |
LL | impl Foo for <u16 as Assoc>::Output {}
   |              ^^^^^^^^^^^^^^^^^^^^^^ the trait `Assoc` is not implemented for `u16`
   |
help: the trait `Assoc` is implemented for `u8`
  --> $DIR/default-impl-normalization-ambig-2.rs:12:1
   |
LL | impl Assoc for u8 {}
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
